第二次作业提交

--- a/需求规格说明书.md
+++ b/需求规格说明书.md
@@ -60,12 +60,7 @@
 - FR-O3：支付成功回调 → 调用 SM-DP+ 获取二维码 → 生成 PNG → 返回下载链接  
 - FR-O4：激活失败自动退款（定时任务扫描「未激活 & 超过 2h」订单，调用撤销接口）
 
-### 4.4 家庭共享
-- FR-F1：订单支持「购买份数」≤5  
-- FR-F2：每份生成独立子二维码（ICCID 不同）  
-- FR-F3：子码可单独下载、转发微信
-
-### 4.5 管理后台
+### 4.4 管理后台
 - FR-A1：运营商登录（白名单机制）  
 - FR-A2：套餐 CRUD（名称、价格、天数、国家、库存、封面图）  
 - FR-A3：订单明细导出 CSV  
@@ -104,7 +99,7 @@
 
 ---
 
-文档作者：张秉瀚
+文档作者：张秉瀚、邱宇彦
 评审：全员 
 发布日期：2025-11-08
 下次迭代：原型评审后 → v1.1
